style.css
body {
    font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 18px;
    margin: 0;
}

.first {
    background-color: #1F2937;
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
    padding: 12px;
    
}

.header {
    display: flex;
    justify-content: space-between;
    margin: 10px 100px;
}

 ul {
    display: flex;
    list-style-type: none;
    padding: 0 24px;
}

.header li {
    padding: 0 24px;
}

a {
        text-decoration: none;
        font-size: 18px;
        color: #E5E7EB;;
}

.hero-logo-text {
    font-size: 24px;
    color: white;
}

.hero {
    display: flex;
    gap: 50px;
    margin: 50px 100px;
}


.hero-image {
    display: flex;
    background-color: #575261;
    color: #E5E7EB;
    width: 600px;
    height: 300px;
    margin: 0 25px;
    justify-content: center;
    align-items: center;
    
}

.hero-left {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
   
}

.hero-main-text {
    font-size: 48px;
    color: #F9FAF8;
    font-weight: 900;
}

.hero-subtext {
    margin: 0;
    font-size: 18px;
    color: #E5E7EB;
}

button {
    width: 120px;
    margin: 20px 10px;
    font-size: 20px;
    font-weight: 800;
    padding: 14px;
    color: #F9FAF8;
    background-color: #3882F6;
    border-radius: 16px;
    border: none;
}

.more-info {
 display: flex;
 flex-direction: column;
 margin-bottom: 50px;
}

.more-info-header {
    margin: 60px 0;
    align-self: center;
    font-size: 36px;
    font-weight: 900;
    color: #1F2937;
}

.info-list {
    display: flex;
    gap: 35px;
    margin: 50px 150px;
}

.list-item {
    display: flex;
    flex-direction: column;
    gap: 20px;
    font-size: 18px;
    color: #1F2937;
    justify-content: center;
}

.info-placeholder {
    width: 200px;
    height: 200px;
    border: solid #3882F6 8px;
    border-radius: 20px;
}

.testimonial{
   background-color: #E5E7EB;
   display: flex;
   flex-direction: column;
   margin-bottom:50px ;
}

.quote {
    font-size: 36px;
    color: #1F2937;
    font-weight: 300;
    padding: 150px 450px 50px 450px;
    text-align: center;
}
.quote-tag {
    font-size: 24px;
    color: #1F2937;
    align-self: flex-end;
    font-weight: 700;
    padding: 10px 50px 50px 0;
}

.call-to-action {
    display: flex;
    padding: 100px 0 100px 0;
    justify-content: space-around;
}

.banner {
    display: flex;
    flex: 0 1 800px;
    align-items: center;
    justify-content: center;
    gap: 70px;
    background-color: #3882F6;
    padding: 30px;
    border-radius: 20px;
}
.banner-text {
    display: flex;
    flex-direction: column;
    color: #F9FAF8;
}

.banner-text-header {
    color:#F9FAF8;
    font-weight: 700;
    font-size: 24px;
}
.banner-text-body {
    font-size: 18px;
    color: #E5E7EB;
}

.call-to-action-button {
    width: 120px;
    margin: 20px 10px;
    font-size: 20px;
    font-weight: 800;
    padding: 14px;
    color: #F9FAF8;
    background-color: #3882F6;
    border-radius: 16px;
    border: 3px solid #F9FAF8;
}

